fixed hamburger margin on small screens

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -177,7 +177,7 @@ hr {
 }
 
 .nav-bar-left {
-  margin-left: 0;
+  margin-left: 1em;
 }
 
 .flex img {
